# Car-instrument

./: .gitignore  CMakeLists.txt  CmakeLists.txt  Dockerfile  Main.qml  README.md  SetEnvironment.md  cd.sh  deploy.sh  main.cpp  mainwindow.cpp  test.sh  toolchain.cmake
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yaml  ci.yaml  crosscompile.yaml
arduino/: README.md  hwtimer_interrupts.cpp  swtimer_interrupts.cpp
docs/: Architecture.md  Battery_Level.md  CAN_Communication.md  Workflow.md
scripts/: deploy.sh  piracer_set.sh
src/: BatteryIcon.cpp  BatteryIcon.hpp  BatteryIcon.qml  CANBusReader.cpp  CANBusReader.h  CmakeLists.txt  INA219.h  README.md  Speedometer.cpp  Speedometer.h  main.cpp  main.qml  main.qml.autosave  mainwindow.h  qml.qrc  speedometer.cpp  speedometer.h
